--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
         <th>Dates</th>
         <th>Work</th>
       </tr>
-
     </thead>
     <tbody>
       <tr>
@@ -45,9 +44,50 @@
       </tr>
     </tbody>
     <tfoot>
-
     </tfoot>
   </table>
+  <hr>
+<h3>Skills</h3>
+
+<table>
+  <tr>
+    <td>
+      <table border="1" px cellspacing="10">
+        <tr>
+          <td>  English proficiency </td>
+          <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td> HTML</td>
+          <td>⭐⭐</td>
+        </tr>
+        <tr>
+          <td> CSS </td>
+          <td>⭐</td>
+        </tr>
+      </table>
+    </td>
+    <td>
+      <table border="1" px cellspacing="10">
+        <tr>
+          <td>  Spanish proficiency </td>
+          <td>⭐⭐</td>
+        </tr>
+        <tr>
+          <td> Public Speaking</td>
+          <td>⭐⭐⭐</td>
+        </tr>
+        <tr>
+          <td> Journalistic writing </td>
+          <td>⭐⭐⭐</td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
+
+
+
 
 
   <hr size="5" noshade>
