--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>💝Vahid's Personal Site</title>
+  <title>Vahid's Personal Site</title>
 </head>
 
 <body>
@@ -20,9 +20,9 @@
   <hr size="5" noshade>
   <h3>Education</h3>
   <ul>
-    <li>Leiden University, the Netherlands 2019- Now &nbsp; PhD researcher of Political Argumentation</li>
-    <li>Azad Univerity of Ahvaz 2010-2013 &nbsp; &nbsp; &nbsp; MA in English Language Teaching</li>
-    <li> Chamran University of Ahvaz 2002-2007 &nbsp; BA in English Literature </li>
+    <li>PhD researcher of Political Argumentation at Leiden University, the Netherlands 2019- Now </li>
+    <li>MA in English Language Teaching  </li>
+    <li>BA in English Literature </li>
   </ul>
   <hr size="5" noshade>
   <h3>Work Experience</h3>
