--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
       <table>
   <tr>
     <td>
-      <table border="1" px cellspacing="10">
+      <table cellspacing="10">
         <tr>
           <td>  2002-2019 </td>
           <td>High School English Teacher</td>
         </tr>
         <tr>
-          <td> 2015-2017L</td>
+          <td> 2015-2017</td>
           <td>University Teacher</td>
         </tr>
       </table>
@@ -52,7 +52,7 @@
     <tfoot>
     </tfoot>
   </table>
-  <hr>
+  <hr size="2">
 <h3>Skills</h3>
 
 <table>
