--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <thead>
       <tr>
         <th>Dates</th>
+        <th></th>
         <th>Work</th>
       </tr>
     </thead>
@@ -52,7 +53,7 @@
     <tfoot>
     </tfoot>
   </table>
-  <hr size="2">
+  <hr size="2" noshade>
 <h3>Skills</h3>
 
 <table>
