--- a/index.html
+++ b/index.html
@@ -28,27 +28,18 @@
   <h3>Work Experience</h3>
   <table cellspacing:"20">
       <tr>
-        <th>Dates</th>
-        <th>Work</th>
+        <th><strong>Dates</strong></th>
+        <th><strong>Work</strong></th>
       </tr>
-    
-  <tr>
-    <td>
-      <table cellspacing="10">
-        <tr>
-          <td>  2002-2019 </td>
-          <td>High School English Teacher</td>
+      <tr>
+         <td>  2002-2019 </td>
+         <td>High School English Teacher</td>
         </tr>
         <tr>
           <td> 2015-2017</td>
           <td>University Teacher</td>
         </tr>
       </table>
-    </td>
-    </tbody>
-    <tfoot>
-    </tfoot>
-  </table>
   <hr size="2" noshade>
 <h3>Skills</h3>
 
