--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="I'm Vahid Niamadpour, PhD researcher of Political Argumentation at Leiden University, and a Junior Web Developer">
     <title>Vahid</title>
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans|Montserrat|Parisienne|Sacramento&display=swap" rel="stylesheet">  </head>
@@ -28,7 +29,7 @@
   <hr class="line1">
   <center>
   <div id="SkillBox">
-          <center><p>My Skills</p></center>
+          <center><p id="skills">My Skills</p></center>
     <div class="SkillBar">
       <div id="Skill-HTML">
         <span class="Skill-Area ">HTML</span>
