--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 </ul>
    <h1>I'm Vahid</h1>
-    <h2 class="subtitle">A Junior<br> Web Developer</h2>
+  <h2 class="subtitle">A Junior<br> Web Developer <em>in the making</em></h2>
 
 <img class="spanishFlag" src="https://media.giphy.com/media/2Y9F1wXDmfVkUp0Yp1/giphy.gif" alt="Spanish flag">
 <img class="iranianFlag" src="https://media.giphy.com/media/c6Wtg5vur71mFDYIxD/giphy.gif" alt="Iran's flag">
@@ -37,7 +37,7 @@
   <hr class="underProfile">
   <center>
   <div id="SkillBox">
-          <center id="skills"><p>My Skills</p></center>
+          <center id="skills"><p>My Skills (none of it is true, it is just for practicing.)</p></center>
     <div class="SkillBar">
       <div id="Skill-HTML">
         <span class="Skill-Area ">HTML</span>
